# toolbox-for-machines

./: .env.example  .gitignore  HARNESS_PROMPT.md  LICENSE  README.md  SETUP_LLM_HOST.md  docker-compose.yml  ruff.toml
.github/workflows/: ci.yml  release.yml
api/: Dockerfile  pyproject.toml
api/src/toolbox/: __init__.py  cache.py  config.py  errors.py  http_client.py  llm.py  main.py  mcp_server.py  prompts.py  services.py  skills.py  url_validator.py
api/src/toolbox/tools/: describe.py  extract.py  fetch.py  harness_prompt.py  search.py  summarize.py  transcribe.py
api/tests/: conftest.py  test_endpoints.py
camoufox/: Dockerfile  requirements.txt  server.py
config/searxng/: settings.yml
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md
whisper/: Dockerfile
